--- a/MCET.html
+++ b/MCET.html
@@ -49,7 +49,7 @@
   
 
 </body>
-  <script src="data.js"type="module"></script>
+  <script src="ja/data.js"type="module"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script  src="js/drmcet.js" type="module">
    
