changed repo bugs

--- a/MCET.html
+++ b/MCET.html
@@ -49,9 +49,10 @@
   
 
 </body>
-  <script src="ja/data.js"type="module"></script>
+  <script src="js/data.js"type="module"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script  src="js/drmcet.js" type="module">
+  <script  src="js/drmcet.js" type="module"></script>
+  <script src="frond_end/req.js" type="module">
    
   </script>
 </html>
