--- a/dashboard.html
+++ b/dashboard.html
@@ -28,8 +28,7 @@
   </div>
   <div class="right-section">
   
-    <button class="but"  onclick="hi()"
-    >
+    <button class="but"  onclick="hi()">
       Log-in
     </button>
     <button class="but">
