--- a/MCET.html
+++ b/MCET.html
@@ -49,6 +49,8 @@
   
 
 </body>
+<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+
   <script src="js/data.js"type="module"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script  src="js/drmcet.js" type="module"></script>
