--- a/dashboard.html
+++ b/dashboard.html
@@ -48,5 +48,6 @@
   
   
 </body>
+<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 <script src="js/display.js" type="module"></script>
 </html>
